--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
+body {
+  margin: 0px;
+  padding: 0px;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  min-height: calc(100vh - 40px)
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: #20232a;
+  width: 100%;
   font-size: calc(10px + 2vmin);
   color: white;
+  height: 60px;
+}
+
+.App-wrapper {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+}
+
+.App-headTitle {
+  color: inherit;
+  margin-left: 10px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
 }
 
 .App-link {
   color: #61dafb;
+  margin-right: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Menu-link {
+  padding: 5px 10px;
+  white-space: nowrap;
+  font-size: 18px;
+  color: inherit;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+.Menu-link:hover {
+  color: #61dafb
+}
+
+.App-section {
+  background-color: #282c34;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  min-height: calc(100vh - 80px);
+  padding: 8px;
 }
